veBeacon with LayerZero

--- a/foundry.toml
+++ b/foundry.toml
@@ -2,6 +2,19 @@
 optimizer_runs = 1000000
 verbosity = 1
 via_ir = true
+src = "src"
+out = "out"
+libs = ["lib"]
+
+remappings = [
+    '@layerzerolabs/oapp-evm/=lib/devtools/packages/oapp-evm/',
+    '@layerzerolabs/lz-evm-protocol-v2/=lib/layerzero-v2/packages/layerzero-v2/evm/protocol',
+    '@layerzerolabs/lz-evm-messagelib-v2/=lib/layerzero-v2/packages/layerzero-v2/evm/messagelib',
+    'solidity-bytes-utils/=lib/solidity-bytes-utils/',
+    '@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/',
+    '@openzeppelin/contracts-upgradeable/=lib/openzeppelin-contracts-upgradeable/contracts/'
+]
+
 
 # Extreme Fuzzing CI Profile :P
 [profile.ci]
